2006-09-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (graph.maxflow) : bug corrected

2006-09-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph, write.graph) : 
	dimacs format added
	(read.graph.dimacs, write.graph.dimacs) : added
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_dimacs)
	(R_igraph_write_graph_dimacs) : added

2006-09-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (graph.density) :
	added loops argument
	* interfaces/R/src/rinterface.c (R_igraph_density) : added loops 
	argument

	* interfaces/R/igraph/R/conversion.R (get.edgelist) : bug corrected

	* interfaces/R/igraph/R/plot.R (plot.igraph) : removed unused 
	argument 'loop.cex'

	* interfaces/R/igraph/R/structural.properties.R (bonpow) : removed
	unused argument 'tmaxdev'

2006-09-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.edgelist) : added

	* interfaces/R/igraph/R/conversion.R (get.edgelist) : names argument 
	added
	* interfaces/R/igraph/R/print.R (print.igraph) : updated
	* interfaces/R/igraph/R/community.R (edge.type.matrix) : updated
	* interfaces/R/igraph/R/plot.R (rglplot) : updated

	* interfaces/R/igraph/R/flow.R (graph.maxflow) : added
	* interfaces/R/src/rinterface.c (R_igraph_maxflow) : added
	
2006-09-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : loop edges added

	* interfaces/R/igraph/R/plot.R (plot.igraph) : more advanced loops
	* interfaces/R/igraph/R/tkplot.R (tkplot, .tkplot.update.edge)
	(.tkplot.create.edge) : loop edges added
	
2006-09-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/interace.R (add.vertices, add.edges) :
	attr argument added
	* interfaces/R/igraph/R/structure.generators.R (graph.data.frame) : 
	added

	* interfaces/R/igraph/R/structure.generators.R (graph.data.frame) : 
	directed argument added
	