@@ -121,4 +121,5 @@ export(igraph.par)
 
 # flows, cuts, etc.
 
-export(graph.maxflow)
+export(graph.maxflow, edge.connectivity, graph.adhesion, edge.disjoint.paths,
+       vertex.connectivity, graph.cohesion, vertex.disjoint.paths)
